# vulkan-triangle

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  vulkan-triangle.sln  vulkan-triangle.vcxproj  vulkan-triangle.vcxproj.filters
cmake/: imgui.cmake  utils.cmake
resources/shaders/: compile.bat  triangle.frag  triangle.vert  vert.spv
src/: CMakeLists.txt  main.cpp
